--- a/pm/pm/doctype/mp_tasks/mp_tasks.json
+++ b/pm/pm/doctype/mp_tasks/mp_tasks.json
@@ -29,15 +29,17 @@
    "options": "UOM"
   },
   {
-   "fetch_from": "task.exp_start_date",
+   "columns": 1,
    "fieldname": "start_date",
    "fieldtype": "Date",
+   "in_list_view": 1,
    "label": "Start date"
   },
   {
-   "fetch_from": "task.exp_start_date",
+   "columns": 1,
    "fieldname": "end_date",
    "fieldtype": "Date",
+   "in_list_view": 1,
    "label": "End date"
   },
   {
@@ -57,7 +59,7 @@
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-03-23 15:12:18.460641",
+ "modified": "2025-03-24 13:27:53.071833",
  "modified_by": "Administrator",
  "module": "Pm",
  "name": "MP Tasks",
