--- a/pm/pm/doctype/wp_tasks/wp_tasks.json
+++ b/pm/pm/doctype/wp_tasks/wp_tasks.json
@@ -29,15 +29,17 @@
    "options": "UOM"
   },
   {
-   "fetch_from": "task.exp_start_date",
+   "columns": 1,
    "fieldname": "start_date",
    "fieldtype": "Date",
+   "in_list_view": 1,
    "label": "Start date"
   },
   {
-   "fetch_from": "task.exp_start_date",
+   "columns": 1,
    "fieldname": "end_date",
    "fieldtype": "Date",
+   "in_list_view": 1,
    "label": "End date"
   },
   {
@@ -57,7 +59,7 @@
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-03-23 15:41:42.902311",
+ "modified": "2025-03-24 13:32:16.908007",
  "modified_by": "Administrator",
  "module": "Pm",
  "name": "WP Tasks",
